chore: publish from main

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -4,13 +4,13 @@ name: Main CI
 on:
   push:
     branches:
-      - "master"
+      - "main"
       - "next"
       - "next-major"
       - "*"
   pull_request:
     branches:
-      - "master"
+      - "main"
       - "next"
       - "next-major"
 jobs:
