--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -74,7 +74,9 @@ spec:
       {{- end }}
                   key: AWS_SECRET_ACCESS_KEY
                   optional: false       
-            {{- toYaml .Values.env | nindent 12 }}
+            {{- with .Values.env }}
+            {{- toYaml . | nindent 12 }}
+            {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
