ci: fix for fork ci

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -4,12 +4,14 @@ name: Main CI
 on:
   push:
     branches:
+      - "main"
       - "master"
       - "next"
       - "next-major"
       - "*"
   pull_request:
     branches:
+      - "main"
       - "master"
       - "next"
       - "next-major"
