fix: improve ci

--- a/.releaserc
+++ b/.releaserc
@@ -25,5 +25,18 @@
                 name: 'develop\/.*',
                 prerelease: true
             }
-        ]
+        ],
+            "plugins": [
+                "@semantic-release/commit-analyzer",
+                "@semantic-release/release-notes-generator",
+                [
+                    "@semantic-release/github",
+                    {
+                        "assets": [
+                            { "path": "pom.xml", "label": "pom" },
+                            { "path": "target/s3proxy", "label": "s3proxy" }
+                        ]
+                    }
+                ]
+            ]
 }
