--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -2,49 +2,44 @@ name: Main CI
 on:
   push:
     branches:
-      - "master"
+      - "main"
+      - next-major
+      - next
   pull_request:
     branches:
       - "*"
 jobs:
   meta:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      issues: write
     outputs:
-      dockerhub-publish: ${{ steps.dockerhub-publish.outputs.defined }}
-      registry: ghcr.io/${{ github.repository }}/container:${{ fromJSON(steps.docker_action_meta.outputs.json).labels['org.opencontainers.image.version'] }}
-      container_tags: ${{ steps.docker_action_meta.outputs.tags }}
-      container_labels: ${{ steps.docker_action_meta.outputs.labels }}
-      container_buildtime: ${{ fromJSON(steps.docker_action_meta.outputs.json).labels['org.opencontainers.image.created'] }}
-      container_version: ${{ fromJSON(steps.docker_action_meta.outputs.json).labels['org.opencontainers.image.version'] }}
-      container_revision: ${{ fromJSON(steps.docker_action_meta.outputs.json).labels['org.opencontainers.image.revision'] }}
-      container_base: ${{ fromJSON(steps.docker_action_meta.outputs.json).tags[0] }}
+      version: ${{ steps.version.outputs.new_release_version }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
-          submodules: false
           persist-credentials: false
-      - id: dockerhub-publish
-        if: "${{ env.MY_KEY != '' }}"
-        run: echo "::set-output name=defined::true"
-        env:
-          MY_KEY: ${{ secrets.DOCKER_PASS }}
-      - name: Docker meta
-        id: docker_action_meta
-        uses: docker/metadata-action@v4.0.1
+      - uses: actions/setup-node@v3
         with:
-          images: ghcr.io/${{ github.repository }}/container
-          flavor: |
-            latest=false
-          tags: |
-            type=sha,format=long
-            type=sha
-            type=match,pattern=s3proxy-(.*),group=1
-            type=ref,event=branch
-            type=ref,event=pr
-            type=ref,event=tag
-          labels: |
-            org.opencontainers.image.licenses=Apache-2.0
+          node-version: 20
+      - name: Semantic Release
+        id: version
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
+        with:
+          dry_run: true
+          semantic_version: 19.0.5
+          extra_plugins: |
+            @semantic-release/commit-analyzer@9.0.2
+            @semantic-release/release-notes-generator@10.0.3
+            @semantic-release/git@10.0.1
+            @semantic-release/github@8.1.0
+            @semantic-release/changelog@6.0.3
+            conventional-changelog-conventionalcommits@6.1.0
+            @semantic-release/exec@6.0.3  
   runTests:
     runs-on: ubuntu-latest
     needs: [meta]
@@ -77,70 +72,21 @@ jobs:
         run: |
           ./src/test/resources/run-s3-tests.sh
 
-      #Store the target
-      - uses: actions/upload-artifact@v2
+      - uses: actions/setup-node@v3
         with:
-          name: s3proxy
-          path: target/s3proxy
-      - uses: actions/upload-artifact@v2
-        with:
-          name: pom
-          path: pom.xml
-
-  Containerize:
-    runs-on: ubuntu-latest
-    needs: [runTests, meta]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v2
-        with:
-          name: s3proxy
-          path: target
-      - uses: actions/download-artifact@v2
-        with:
-          name: pom
-          path: .
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2.0.0
-        if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }}
-
-      - name: Login to GHCR
-        uses: docker/login-action@v2.0.0
-        if: github.event_name != 'pull_request'
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ needs.meta.outputs.container_base }}
-          labels: ${{ needs.meta.outputs.container_labels }}
-          build-args: |
-            BUILDTIME=${{ needs.meta.outputs.container_buildtime }}
-            VERSION=${{ needs.meta.outputs.container_version }}
-            REVISION=${{ needs.meta.outputs.container_revision }}
-          cache-from: type=registry,ref=${{ needs.meta.outputs.container_base }}
-          cache-to: type=inline
-
-      - name: Publish to Docker
-        if: github.event_name != 'pull_request' && needs.meta.outputs.dockerhub-publish == 'true'
-        run: |
-          curl -L https://github.com/regclient/regclient/releases/download/v0.3.5/regctl-linux-amd64 >/tmp/regctl
-          chmod 755 /tmp/regctl
-          for line in $CONTAINER_DEST_TAGS; do echo working on "$line"; /tmp/regctl image copy $SOURCE_CONTAINER $line; done
+          node-version: 20
+      - name: Semantic Release
+        id: version
+        uses: cycjimmy/semantic-release-action@v4
         env:
-          SOURCE_CONTAINER: ${{ needs.meta.outputs.container_version }}
-          CONTAINER_DEST_TAGS: ${{ needs.meta.outputs.container_tags }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
+        with:
+          semantic_version: 19.0.5
+          extra_plugins: |
+            @semantic-release/commit-analyzer@9.0.2
+            @semantic-release/release-notes-generator@10.0.3
+            @semantic-release/git@10.0.1
+            @semantic-release/github@8.1.0
+            @semantic-release/changelog@6.0.3
+            conventional-changelog-conventionalcommits@6.1.0
+            @semantic-release/exec@6.0.3  
